[Bug #1235] Added scrollbar to perspective icons area when needed
FEA: ItEr75S04BugFixing

--- a/libreplan-webapp/src/main/webapp/common/css/libreplan_zk.css
+++ b/libreplan-webapp/src/main/webapp/common/css/libreplan_zk.css
@@ -100,6 +100,11 @@ body .advancedallocationlayout .icono .z-button-cm {
     border-right:0;
 }
 
+
+.perspectives-column .global-commands {
+    margin-bottom: 0;
+}
+
 .toolbar-box {
     border:0;
 }
